Fix animation mobile menu

--- a/src/Components/Burger/Burger.sass
+++ b/src/Components/Burger/Burger.sass
@@ -1,6 +1,6 @@
 @media (max-width: 768px)
 
-  .Burger
+  .burger
     width: 2rem
     height: 2rem
     position: absolute
@@ -11,6 +11,7 @@
     flex-flow: column nowrap
     cursor: pointer
     margin: 10px
+    //transition: transform .25s ease-in-out
 
 
     div
@@ -18,3 +19,9 @@
       height: .25rem
       background-color: white
       border-radius: 10px
+
+
+  #first, #third, #secound
+    transition: transform .35s ease-in-out
+
+
