--- a/src/Components/SideDrawer/SideDrawer.sass
+++ b/src/Components/SideDrawer/SideDrawer.sass
@@ -11,7 +11,7 @@
   //justify-content: center
   align-items: center
   transform: translateX(-100%)
-  transition: transform 1s ease-out
+  transition: transform .35s ease-in-out
   z-index: 1
 
 
